# heteromorphic

./: .gitignore  Cargo.toml  README.md
crates/heteromorphic/: Cargo.toml
crates/heteromorphic/src/: lib.rs
crates/heteromorphic_zk/: Cargo.toml  build.rs
crates/heteromorphic_zk/elf/: init
crates/heteromorphic_zk/src/: lib.rs
crates/heteromorphic_zk/src/zk_programs/: init.rs
